--- a/src/ros2_ws/src/jose_entregas/package.xml
+++ b/src/ros2_ws/src/jose_entregas/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>navigation-cli-python</name>
+  <name>jose_entregas</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="filipikikuchi@gmail.com">hallzero</maintainer>
+  <maintainer email="betorm20022@gmail.com">albertomiranda</maintainer>
   <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
