--- a/src/plataform/docker-compose.yml
+++ b/src/plataform/docker-compose.yml
@@ -12,6 +12,11 @@ services:
             - '5432:5432'
         volumes:
             - ./.cache/db:/var/lib/postgresql/data
+        healthcheck:
+            test: ['CMD', 'pg_isready', '-U', 'postgres']
+            interval: 5s
+            timeout: 5s
+            retries: 5
 
     migrate:
         build: .
@@ -21,7 +26,8 @@ services:
         container_name: migrate
         command: python manage.py migrate
         depends_on:
-            - database
+            database:
+                condition: service_healthy
     app:
         build: .
         volumes:
@@ -32,5 +38,7 @@ services:
         container_name: plataform
         command: python manage.py runserver 0.0.0.0:8000
         depends_on:
-            - database
-            - migrate
+            database:
+                condition: service_healthy
+            migrate:
+                condition: service_completed_successfully
