--- a/src/api/package.json
+++ b/src/api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "qrcode-terminal": "^0.12.0",
+    "rclnodejs": "^0.23.3",
     "roslib": "^1.4.1",
     "whatsapp-web.js": "^1.23.0"
   }
