--- a/src/api/package.json
+++ b/src/api/package.json
@@ -15,6 +15,7 @@
     "qrcode-terminal": "^0.12.0",
     "rclnodejs": "^0.23.3",
     "roslib": "^1.4.1",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "^1.23.0",
+    "pg": "8.11.3"
   }
 }
